Bug 391093 - Tasks are not shown in gantt chart at startup
Summary: Tasks are not shown in gantt chart at startup
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-26 11:06 UTC by Dag Andersen
Modified: 2018-02-26 11:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2018-02-26 11:06:26 UTC
Workaround: expand/collapse if summary tasks exists, or select Show project.
Comment 1 Dag Andersen 2018-02-26 11:11:01 UTC
Git commit 5f2709f9ee07411b068c19e75ebbed100f762ffa by Dag Andersen.
Committed on 26/02/2018 at 11:07.
Pushed by danders into branch 'calligra/3.1'.

Plan: Fix Tasks are not shown in gantt chart at startup
FIxed-In: 3.1.1

M  +1    -0    plan/src/libs/models/kptnodeitemmodel.cpp

https://commits.kde.org/calligra/5f2709f9ee07411b068c19e75ebbed100f762ffa
Comment 2 Dag Andersen 2018-02-26 11:12:57 UTC
Git commit 814b99c59261116ddc886e8c34b0c053495b22f3 by Dag Andersen.
Committed on 26/02/2018 at 11:12.
Pushed by danders into branch 'master'.

Plan: Fix Tasks are not shown in gantt chart at startup
FIxed-In: 3.1.1

M  +1    -0    plan/src/libs/models/kptnodeitemmodel.cpp

https://commits.kde.org/calligra/814b99c59261116ddc886e8c34b0c053495b22f3