Plan: Fix Tasks are not shown in gantt chart at startup

BUG:391093
FIxed-In: 3.1.1